translation-tool/inputs/source_meta/objects/Case_Business_Hours__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Hours_Name__c</fullName>
        <label>Business Hours Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_per_workday__c</fullName>
        <label>Hours per workday</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Business Hours</label>
    <pluralLabel>Case Business Hours</pluralLabel>
</CustomObject>